--- a/src/views/home/index.ejs
+++ b/src/views/home/index.ejs
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html manifest="cache.manifest"><!--新增属性 设置离线缓存文件-->
 <meta>
@@ -8,7 +9,6 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <link rel="icon" href="" type="image/gif" sizes="16*16"><!--sizes 新增-->
-    <base href="http://localhost/" target="_blank"> <!--target 新增-->
     <link href="<%= version.css.home %>" rel="stylesheet" type="text/css"/>
 </head>
 <body>
@@ -16,7 +16,10 @@
     <router-view></router-view>
 </div>
 </body>
+
 <script src="<%= version.js.manifest %>"></script>
 <script src="<%= version.js.vendor %>"></script>
 <script src="<%= version.js.home %>"></script>
+<script src="<%= version.js.commons %>"></script>
+
 </html>
