--- a/src/views/home/index.ejs
+++ b/src/views/home/index.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="cache.manifest"><!--新增属性 设置离线缓存文件-->
+<html>
 <meta>
     <meta http-equiv="pragma" content="no-cache">
     <meta charset="utf-8">  <!--新增属性-->
